# jwt-auth

./: .gitattributes  .gitignore  .php-cs-fixer.dist.php  CONTRIBUTING.md  Makefile  README.md  UPGRADING.md  composer.json  phpstan-baseline.neon
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: docs.yml  tests.yml
docs/: .gitignore  breaking.rst  conf.py  decoder.rst  index.rst  options.rst  pyproject.toml  quickstart.rst  requirements.txt
src/Middleware/: JwtAuthentication.php
src/Rector/: JwtAuthUpgradeRector.php
tests/: FirebaseDecoderTest.php  JwtAuthenticationTest.php
tests/Rector/JwtAuthUpgradeRector/: JwtAuthUpgradeRectorTest.php
tests/Rector/JwtAuthUpgradeRector/Fixture/: path_and_ignore.php.inc
