[project]
name = "jimtools-jwt-auth"
version = "3.0.0"
description = "PSR 15 JWT Authentication middleware. Replacement for "
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "pygments>=2.19.2",
    "sphinx>=8.1.3",
    "sphinx-multiversion>=0.2.4",
    "sphinx-rtd-theme>=3.0.2",
]
